overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 #app {
 	width: 100vw;
 	height: 100vh;
+	overflow: hidden;
 	background: radial-gradient(transparent, rgba(0, 0, 0, 0.828)) #2d3262;
 	position: relative;
 
